--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Elham rababah",
   "license": "ISC",
   "dependencies": {
+    "2": "^1.0.2",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -25,6 +26,7 @@
     "morgan": "^1.9.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-router": "^2.0.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   }
