add signin and signup template

--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "react-router": "^2.0.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
   }
 }
