--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongoose": "^5.0.3",
     "morgan": "^1.9.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
