--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^0.14.6",
     "react-router": "^2.0.0",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "nodemon": "^1.14.12"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
