--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpackserver": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
+    "webpackserver": "NODE_ENV=production ./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
     "start": "nodemon server/server.js"
   },
   "author": "Elham rababah",
